# nz-switch

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
config/mirrors/: android-gradle.json  android-maven.json  apt.json  brew.json  bun.json  cargo.json  choco.json  cocoapods.json  composer.json  conda.json  deno.json  docker.json  ghcr.json  go.json  gradle.json  huggingface.json  k8s-gcr.json  k8s-registry.json  maven.json  nodejs.json  npm.json  nuget.json  pacman.json  pip.json  pnpm.json  pub.json  python.json  quay.json  rubygems.json  rustup.json  swift.json  vscode.json  yarn.json
gui/: index.html  package.json  pnpm-lock.yaml
gui/src/: App.tsx  api.ts  glass.css  icons.tsx  main.tsx  types.ts  utils.ts
gui/src/components/: ConfirmModal.tsx  Dashboard.tsx  DoctorPanel.tsx  ErrorBoundary.tsx  MirrorPanel.tsx  SettingsPanel.tsx  TitleBar.tsx
gui/src/hooks/: useToast.ts
src/: cli.rs  config.rs  dns.rs  doctor.rs  env.rs  format.rs  git.rs  lib.rs  local_config.rs  main.rs  profile.rs  proxy.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/mirror/: apply.rs  config.rs  detect.rs  env_vars.rs  mod.rs  parse.rs  paths.rs  reset.rs  test.rs  types.rs
