[package]
name = "nz-switch"
version = "0.1.0"
edition = "2021"
description = "一键切换中国内地开发环境 — 管理镜像源、代理、环境变量"
license = "MIT"
readme = "README.md"
repository = "https://github.com/XUranus/nz-switch"
keywords = ["china", "mirror", "proxy", "gfw", "dev-environment"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
colored = "3"
comfy-table = "7"
anyhow = "1"
which = "7"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["net", "rt", "sync", "time"] }

[dev-dependencies]
tempfile = "3"
